# python_learning_material

./: .editorconfig  CHANGELOG.md  Changes.md  README.md  what_is_new_311.txt  what_is_new_35.txt  what_is_new_36.txt  what_is_new_37.txt  what_is_new_38.txt
00_Install_Python_environment/: README.md  Using_github_with_SSH_key.md
00_Install_Python_environment/Python_learning/: .editorconfig  .gitignore  pyproject.toml  setup.cfg
01_Introduction_to_Python/: 01_History_and_ecosystem.md  01_History_and_ecosystem.txt  02_Philosophy.md  02_Philosophy.txt  03_syntax.md  03_syntax.txt  04_execution.txt
02_Basic_variables/: 01_Basic_variables.md  01_Basic_variables.txt  02_Slicing.md  02_Slicing.txt  03_String_operations.md  03_String_operations.txt  overwrite_builtins.py
03_Control_flow/: 01_Conditions.md  01_Conditions.txt  02_for_loops.md  02_for_loops.txt  03_while_loops.md  03_while_loops.txt
04_Function_basics/: 01_User_functions.txt  01_user_functions.md  02_Important_builtin_functions.md  02_Important_builtin_functions.txt
05_Collections_data_structures/: 01_list_and_tuple.md  01_list_and_tuple.txt  02_set.md  02_set.txt  03_dict.md  03_dict.txt  Data_structures_and_Python_performance_of_them.md  number_with_text.py
06_Collection_operations/: 01_list_operations.md  01_list_operations.txt  02_set_operations.md  02_set_operations.txt  03_dict_operations.md  03_dict_operations.txt
07_Comprehensions/: 01_list_comprehension.md  01_list_comprehension.txt
08_More_on_functions/: 01_Returning_multiple_values.py  02_Function_optional_parameters_with_default_value.py  03_Unpacking.py  04_lambda.md  04_lambda.txt
09_Date_time_timedelta/: 01_time.md  01_time.txt  02_datetime.md  02_datetime.txt  03_timedelta.md  03_timedelta.txt  datetime_helper.py  use_datetime_helper.py
09_Generators/: 02_Use_generator_with_for.py  06_Generator_expression_example.py
10_Reading_and_writing_text_files/: 01_Reading_and_writing_files.md  01_Reading_and_writing_files.txt
11_Exceptions_and_exception_handling/: 01_exceptions.md  01_exceptions.txt  03_exceptions.txt
12_Modules_and_importing/: 01_import_modules.md  01_import_modules.txt
12_Modules_and_importing/Import_01/: exporter.py  importer.py
12_Modules_and_importing/Import_02/: exporter.py  importer.py
12_Modules_and_importing/Import_03/: importer.py
12_Modules_and_importing/Import_03/modules/: exporter.py
12_Modules_and_importing/Import_04/: importer.py
12_Modules_and_importing/Import_04/modules/: exporter.py
12_Modules_and_importing/Import_05/: importer.py
12_Modules_and_importing/Import_05/modules/: __init__.py  exporter.py
13_Generators/: 01_Generator_functions.md  01_Generator_functions.txt  02_Use_generator_with_for.py  03_Use_generator_with_next.py  04_Generator_exhausted.py  05_Generator_expressions.md  05_Generator_expressions.txt  06_Generator_expression_example.py
14_Command_line_arguments/: 01_click.py
15_OOP_Basics/: 01_object_oriented.md  01_object_oriented.txt  01_oop.py  02_property_and_repr.py  03_oop_attributes_example.py
16_Decorators/: 01_decorators.py
17_json/: 01_using_json.py  people.json
18_yaml/: 01_using_yaml.py  config.yaml
19_Other_useful_things/: 01_map_function.py  02_zip_function.py  03_named_tuple.py  04_counter.py  05_default_dict.py  06_random_stuff.py  07_str_translate.py  08_unicode_data.py  09_enum.py
19_Other_usefult_things/: 01_map_function.py  03_default_dict.py  03_named_tuple.txt.txt  04_random_stuff.py  08_unicode_data.py
20_How_to_write_readable_Pythonic_code/: 01_Abbreviations.md  01_Abbreviations.txt  01_Multi_lines_in_code.py  02_Naming.md  02_Naming.txt  03_Functions.md  03_Functions.txt  03_Magic_nmbers.txt  04_Comments.md  04_Comments.txt  05_Multi_lines_in_code.py  05_Multi_lines_in_code.txt.txt  06_Switch_(several_elif)_in_dict.py  06_Switch_(several_elif)_in_dict.txt.txt  07_Magic_numbers.md  07_Magic_numbers.txt
21_Logging/: 01_Logging.txt  02_logging_basic_config.txt
21_Logging/01_Logging/: 01_Logging.md  01_Logging.txt
21_Logging/02_logging_basic_config/: 02_logging_basic_config.txt
21_Logging/03_logging_multiple_modules/: main_module.py  sub_module.py
21_Logging/04_logging_in_library/: library.py  main_logging.py  main_no_logging.py
21_Logging/05_customized_logging/: create_logger.py  create_logger_usage.py  multiple_files.py  multiple_files_usage.py
21_pytest/01_Introduction_to_pytest/: About_pytest.txt
21_pytest/02_mark_test_cases/: mark_test_cases.py
21_pytest/04_setup_and_teardown/: test_with_setup_teardown.py
21_pytest/05_run_slow_user_defined_commnad_line_switch/: conftest.py  test_slow_or_fast.py
22_Time_zones_pytz/: 01_Time_zones_with_different_DST.py
22_pytest/03_parametrizing_functions/: test_parameters.py
Good_articles/: Python_data_structures.md
Z_Other_learning_resorces_Z/: Learning_resources.txt
pytest/02_mark_test_cases/: mark_test_cases.py
pytest/03_parametrizing_functions/: test_parameters.py
pytest/04_setup_and_teardown/: test_with_setup_teardown.py
